12-11-2007: Rotation - Fixed: On the first panel the units should be degrees rather than radians.  
12-11-2007: Rotation - Moved the pause symbol partly on the disc; increased its size
12-11-2007: Rotation - "Clear" also pauses the simulation
12-11-2007: Rotation - Fixes (see unfuddle)
12-6-2007: Rotation - rewrote layout for play area and torque control panels
12-6-2007: Rotation - rewrote control panel layout
12-4-2007: Rotation - Moved mass graphic (partial side view) to the North West side, increased size range
12-4-2007: Rotation - Internationalized text
12-4-2007: Rotation - Fixed: Platform and ladybug get out of sync when moving the angle slider quickly
12-4-2007: Rotation - Generalized new rendering strategy for rotation platform opening panel
12-4-2007: Rotation - Fixed: Handbrake doesn't move on playback
12-4-2007: Rotation - added a trial implementation for mass graphic
12-3-2007: Rotation - Fixed: memory problem in DefaultTimeSeries when recording for a long time
12-1-2007: Rotation - Added an introductory panel.
11-29-2007: Rotation - Changed label colors for checkboxes
11-27-2007: Rotation - Fixed high-priority memory leaks
11-27-2007: Torque - Fixed the linear acceleration vector to be non-central for constant torque
11-12-2007: Torque - Fixed the linear acceleration vector to be non-central for constant angular acceleration
11-7-2007: Torque - Changed brake graphic from pusher to brake pad
11-6-2007: Torque - Changed background to make it seem more top-down instead of possibly side view
10-28-2007: Torque - Changed the background color of the play area
10-28-2007: Torque - Added a control panel to the introductory torque panel
10-28-2007: Torque - Removed theta = 0 indicator on the intro panel
10-28-2007: Torque - Replaced arrow graphic with bolder axis graphic (black vs gray)
10-28-2007: Torque - Made the brake block black to make it look more like a brake
10-28-2007: Torque - Increased font size for 1024x768